--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,14 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 21 ]
+        java: [ 25 ]
     name: Java ${{ matrix.java }}
     steps:
-      - uses: actions/checkout@v2
-      - name: setup
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v5
+      - uses: actions/setup-java@v5
         with:
-          java-version: ${{ matrix.java }}
-      - name: build
-        run: |
-          mvn -B package
+          distribution: 'temurin'
+          java-version: '25-ea'
+          cache: 'maven'
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
